project done and refactored
